<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:padding="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/easyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimary"
        android:text="@string/easy"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginEnd="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/mediumButton"/>

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/medium"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="6dp"
        app:layout_constraintTop_toTopOf="@id/easyButton"
        app:layout_constraintStart_toEndOf="@id/easyButton"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/hardButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/hard"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/easyButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/impossibleButton"/>

    <Button
        android:id="@+id/impossibleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/impossible"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="6dp"
        app:layout_constraintTop_toTopOf="@id/hardButton"
        app:layout_constraintStart_toEndOf="@id/hardButton"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimary"
        android:text="@string/play"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/hardButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>